<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tabata HIIT Timer</string>
    <string name="zeroes">00</string>
    <string name="prepare">Prepare</string>
    <string name="remain">5/8</string>
    <string name="round">Round:</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="font_size">Font size</string>

</resources>