<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlBG"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvCDT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/zeroes"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="120dp"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/prepare"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45dp"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvIntervals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/remain"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45dp"
        tools:ignore="HardcodedText,SpUsage" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvIntervals"
        android:layout_centerHorizontal="true"
        android:text="@string/round"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/soundView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/play"
        android:padding="10dp"
        android:src="@drawable/ic_sound_on" />

    <ImageView
        android:id="@+id/pauseView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:src="@drawable/ic_pause" 
        android:contentDescription="@string/pause"/>

    <ImageView
        android:id="@+id/bigSmallView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:src="@drawable/ic_size_small" 
        android:contentDescription="@string/font_size"/>

</RelativeLayout>